# sdkwork-video-cut

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECT.md  CLAUDE.md  COMMERCIAL-LICENSE.md  DATABASE_SPEC.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.json  vite.config.js  vite.config.ts
.sdkwork/: README.md
apps/: README.md
database/: README.md  database.manifest.json
deploy/: runtime-profiles.yaml
docs/: INDEX.yaml  README.md
host/: Cargo.toml
host/database/schema/postgres/: 001_baseline.sql
host/database/schema/sqlite/: 001_baseline.sql
host/src/: contracts.rs  database_queue.rs  doctor.rs  lib.rs  main.rs  media_assets.rs  media_audio.rs  media_cover.rs  media_probe.rs  media_render.rs  media_render_manifest.rs  media_semantic.rs  media_subtitle.rs  media_subtitle_format.rs  media_transcript.rs  media_vad.rs  models.rs  providers.rs  runtime_config.rs  settings.rs  speech_transcription.rs  state.rs  tooling.rs  workspace.rs
host/tests/: auth_test.rs  database_queue_test.rs  host_contract_test.rs  provider_contract_test.rs  runtime_config_test.rs  workspace_manifest_test.rs
models/: silero-vad.onnx.manifest.json
scripts/: autocut-cli-args.mjs  autocut-cli-args.test.mjs  autocut-release-platforms.mjs  check-autocut-app-manifest-release-readiness.mjs  check-autocut-app-manifest-release-readiness.test.mjs  check-autocut-architecture.mjs  check-autocut-baidunetdisk-real-media-slice.mjs  check-autocut-feature-workflows.mjs  (+109 more)
(+173 files in other folders)
