[package]
name = "sdkwork-video-cut-host"
version = "0.1.0"
edition = "2024"

[lib]
name = "sdkwork_video_cut_host"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["multipart"] }
base64 = "0.22.1"
hound = "3.5.1"
ort = "2.0.0-rc.12"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tokio = { version = "1.48.1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tower-http = { version = "0.6.7", features = ["cors"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
tower = "0.5.2"
